--- a/BookingTDD/Views/Home/Index.cshtml
+++ b/BookingTDD/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     IEnumerable<SelectListItem> adultList = (IEnumerable<SelectListItem>)ViewBag.ListAdt ?? new List<SelectListItem>();
     IEnumerable<SelectListItem> childList = (IEnumerable<SelectListItem>)ViewBag.ListPas ?? new List<SelectListItem>();
+    IEnumerable<SelectListItem> cities = (IEnumerable<SelectListItem>)ViewBag.Cities ?? new List<SelectListItem>();
 }
 
 <link href="~/Content/gijgo/combined/gijgo.min.css" rel="stylesheet" />
@@ -28,13 +29,15 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 @Html.LabelFor(model => model.Origin, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.Origin, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Origin, cities, new { @class = "form-control" })
+                @*@Html.EditorFor(model => model.Origin, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.ValidationMessageFor(model => model.Origin, "", new { @class = "text-danger" })
 
             </div>
             <div class="form-group col-md-6">
                 @Html.LabelFor(model => model.Destination, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.Destination, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Destination, cities, new { @class = "form-control" })
+                @*@Html.EditorFor(model => model.Destination, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.ValidationMessageFor(model => model.Destination, "", new { @class = "text-danger" })
             </div>
         </div>
